--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,8 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
-    }
+        "variant": "cpp",
+        "any": "cpp"
+    },
+    "editor.formatOnSave": true
 }
